baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__optional_call_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "optional_call_rethrows"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              THROWS_CLAUSE
                KW_THROWS "throws"
                TYPE_EXPR "string"
                  WORD "string"
          R_PAREN ")"
          QUESTION "?"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int?"
      WORD "int"
      QUESTION "?"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OPTIONAL_CALL_EXPR
          WORD "cb"
          QUESTION_DOT "?."
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "optional_call_caught"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cb"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          FUNCTION_TYPE_PARAM
            TYPE_EXPR
              L_PAREN "("
              R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              THROWS_CLAUSE
                KW_THROWS "throws"
                TYPE_EXPR "string"
                  WORD "string"
          R_PAREN ")"
          QUESTION "?"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int?"
      WORD "int"
      QUESTION "?"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CATCH_EXPR
          OPTIONAL_CALL_EXPR
            WORD "cb"
            QUESTION_DOT "?."
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
          CATCH_CLAUSE
            KW_CATCH "catch"
            L_PAREN "("
            CATCH_PATTERN "e"
              WORD "e"
            R_PAREN ")"
            L_BRACE "{"
            CATCH_ARM
              CATCH_PATTERN "_"
                WORD "_"
              FAT_ARROW "=>"
              WORD "null"
            R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_optional_call_with_throwing_callback"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int?"
      WORD "int"
      QUESTION "?"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "optional_call_rethrows"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              BLOCK_EXPR
                L_BRACE "{"
                THROW_STMT
                  THROW_EXPR
                    KW_THROW "throw"
                    STRING_LITERAL "boom"
                      QUOTE """
                      WORD "boom"
                      QUOTE """
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
