baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__returned_closures.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LAMBDA_EXPR
          PARAMETER_LIST "()"
            L_PAREN "("
            R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          BLOCK_EXPR "{ 42 }"
            L_BRACE "{"
            INTEGER_LITERAL "42"
            R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_thrower"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          THROWS_CLAUSE
            KW_THROWS "throws"
            TYPE_EXPR "string"
              WORD "string"
      R_PAREN ")"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LAMBDA_EXPR
          PARAMETER_LIST "()"
            L_PAREN "("
            R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          BLOCK_EXPR
            L_BRACE "{"
            THROW_STMT
              THROW_EXPR
                KW_THROW "throw"
                STRING_LITERAL "error"
                  QUOTE """
                  WORD "error"
                  QUOTE """
            R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_use_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          CALL_EXPR
            WORD "make_pure"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_use_thrower"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          EQUALS "="
          CALL_EXPR
            WORD "make_thrower"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
        CALL_EXPR
          WORD "f"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
