baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__stored_callback_enforcement.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "StoredPureHandler"
    L_BRACE "{"
    FIELD
      WORD "run"
      COLON ":"
      TYPE_EXPR
        L_PAREN "("
        R_PAREN ")"
        ARROW "->"
        TYPE_EXPR "null"
          WORD "null"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_bad_stored_handler"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "StoredPureHandler"
      WORD "StoredPureHandler"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "StoredPureHandler"
          L_BRACE "{"
          OBJECT_FIELD
            WORD "run"
            COLON ":"
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "null"
                WORD "null"
              BLOCK_EXPR
                L_BRACE "{"
                THROW_STMT
                  THROW_EXPR
                    KW_THROW "throw"
                    STRING_LITERAL "error"
                      QUOTE """
                      WORD "error"
                      QUOTE """
                R_BRACE "}"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_good_stored_handler"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "StoredPureHandler"
      WORD "StoredPureHandler"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "StoredPureHandler"
          L_BRACE "{"
          OBJECT_FIELD
            WORD "run"
            COLON ":"
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "null"
                WORD "null"
              BLOCK_EXPR "{ null }"
                L_BRACE "{"
                WORD "null"
                R_BRACE "}"
          R_BRACE "}"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "StoredThrowingHandler"
    L_BRACE "{"
    FIELD
      WORD "run"
      COLON ":"
      TYPE_EXPR
        L_PAREN "("
        R_PAREN ")"
        ARROW "->"
        TYPE_EXPR "null"
          WORD "null"
        THROWS_CLAUSE
          KW_THROWS "throws"
          TYPE_EXPR "string"
            WORD "string"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_stored_throwing_handler"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "StoredThrowingHandler"
      WORD "StoredThrowingHandler"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "StoredThrowingHandler"
          L_BRACE "{"
          OBJECT_FIELD
            WORD "run"
            COLON ":"
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "null"
                WORD "null"
              BLOCK_EXPR
                L_BRACE "{"
                THROW_STMT
                  THROW_EXPR
                    KW_THROW "throw"
                    STRING_LITERAL "error"
                      QUOTE """
                      WORD "error"
                      QUOTE """
                R_BRACE "}"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_stored_local_error"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          COLON ":"
          TYPE_EXPR
            L_PAREN "("
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "oops"
                    QUOTE """
                    WORD "oops"
                    QUOTE """
              R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_stored_local_shape_mismatch"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          COLON ":"
          TYPE_EXPR
            L_PAREN "("
            FUNCTION_TYPE_PARAM
              TYPE_EXPR "int"
                WORD "int"
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "oops"
                    QUOTE """
                    WORD "oops"
                    QUOTE """
              R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_stored_local_ok"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          COLON ":"
          TYPE_EXPR
            L_PAREN "("
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
            BLOCK_EXPR "{ null }"
              L_BRACE "{"
              WORD "null"
              R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_stored_local_with_throws"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "f"
          COLON ":"
          TYPE_EXPR
            L_PAREN "("
            R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
            THROWS_CLAUSE
              KW_THROWS "throws"
              TYPE_EXPR "string"
                WORD "string"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "null"
              WORD "null"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "oops"
                    QUOTE """
                    WORD "oops"
                    QUOTE """
              R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "StoredPureCb"
    EQUALS "="
    TYPE_EXPR
      L_PAREN "("
      R_PAREN ")"
      ARROW "->"
      TYPE_EXPR "int"
        WORD "int"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_stored_alias_error"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "cb"
          COLON ":"
          TYPE_EXPR "StoredPureCb"
            WORD "StoredPureCb"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "error"
                    QUOTE """
                    WORD "error"
                    QUOTE """
              R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_stored_alias_ok"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "cb"
          COLON ":"
          TYPE_EXPR "StoredPureCb"
            WORD "StoredPureCb"
          EQUALS "="
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR "{ 42 }"
              L_BRACE "{"
              INTEGER_LITERAL "42"
              R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_stored_closure_bad"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "oops"
                    QUOTE """
                    WORD "oops"
                    QUOTE """
              R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_stored_closure_good"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR "{ 42 }"
              L_BRACE "{"
              INTEGER_LITERAL "42"
              R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_stored_closure_with_throws"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      L_PAREN "("
      FUNCTION_TYPE_PARAM
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
          THROWS_CLAUSE
            KW_THROWS "throws"
            TYPE_EXPR "string"
              WORD "string"
      R_PAREN ")"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        RETURN_STMT
          KW_RETURN "return"
          LAMBDA_EXPR
            PARAMETER_LIST "()"
              L_PAREN "("
              R_PAREN ")"
            ARROW "->"
            TYPE_EXPR "int"
              WORD "int"
            BLOCK_EXPR
              L_BRACE "{"
              THROW_STMT
                THROW_EXPR
                  KW_THROW "throw"
                  STRING_LITERAL "oops"
                    QUOTE """
                    WORD "oops"
                    QUOTE """
              R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
